--- a/udemy-csharp-intermediate/udemy-csharp-intermediate.csproj
+++ b/udemy-csharp-intermediate/udemy-csharp-intermediate.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Classes\Post.cs"/>
     <Compile Include="Classes\Stopwatch.cs"/>
+    <Compile Include="Inheritance\Stack.cs"/>
     <Compile Include="Program.cs"/>
     <Compile Include="Properties\AssemblyInfo.cs"/>
   </ItemGroup>
