--- a/udemy-csharp-intermediate/udemy-csharp-intermediate.csproj
+++ b/udemy-csharp-intermediate/udemy-csharp-intermediate.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
-            Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
+          Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -34,23 +34,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-      <Reference Include="System"/>
-      <Reference Include="System.Core"/>
-      <Reference Include="System.Xml.Linq"/>
-      <Reference Include="System.Data.DataSetExtensions"/>
-      <Reference Include="System.Data"/>
-      <Reference Include="System.Xml"/>
+    <Reference Include="System"/>
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    <Reference Include="System.Data"/>
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
-      <Compile Include="Classes\Post.cs"/>
-      <Compile Include="Classes\Stopwatch.cs"/>
-      <Compile Include="Inheritance\Stack.cs"/>
-      <Compile Include="Polymorphism\DbConnection.cs"/>
-      <Compile Include="Polymorphism\SqlConnection.cs"/>
-      <Compile Include="Program.cs"/>
-      <Compile Include="Properties\AssemblyInfo.cs"/>
+    <Compile Include="Classes\Post.cs"/>
+    <Compile Include="Classes\Stopwatch.cs"/>
+    <Compile Include="Inheritance\Stack.cs"/>
+    <Compile Include="Polymorphism\DbConnection.cs"/>
+    <Compile Include="Polymorphism\OracleConenction.cs"/>
+    <Compile Include="Polymorphism\SqlConnection.cs"/>
+    <Compile Include="Program.cs"/>
+    <Compile Include="Properties\AssemblyInfo.cs"/>
   </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
            Other similar extension points exist, see Microsoft.Common.targets.
       <Target Name="BeforeBuild">
